syntax = "proto3";
package com.example.token;

message JoinRequest {
  int32 id = 1;
  string ipAddress = 2;
  int32 port = 3;
}

message JoinResponse {
  int32 id = 1;
  string ipAddress = 2;
  int32 port = 3;
  string message = 4;
}


message TokenData {

  message ReadyList {
    int32 id = 1;
    double value = 2;
  }

  message WaitingList {
    int32 id = 1;
  }

  repeated ReadyList readyList = 2;
  repeated WaitingList waitingList = 3;

}

message Empty {

}


service NodeService {
  rpc joinNetwork(JoinRequest) returns (JoinResponse);
  rpc tokenData(TokenData) returns (Empty);
}
